--- a/ps3_group_a2.ipynb
+++ b/ps3_group_a2.ipynb
@@ -291,7 +291,7 @@
    "metadata": {},
    "source": [
     "## Question 6\n",
-    "Answered by - "
+    "Answered by - Alberto Moscardo Plescan"
    ]
   },
   {
