--- a/ps3_group_a2.ipynb
+++ b/ps3_group_a2.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "46a7b062",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
    "metadata": {},
    "source": [
     "## Question 7\n",
-    "Answered by -"
+    "Answered by - Aditya Praveen"
    ]
   },
   {
@@ -399,8 +399,74 @@
    "execution_count": null,
    "id": "1c310cc9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2766108fc6e43dda0ed8112c862c94f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.125, description='a_values', max=1.0, step=0.01), Output()), _dom_cl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import ipywidgets\n",
+    "from ipywidgets import interact\n",
+    "# from Q6\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
+    "def f(t, a, b, c):\n",
+    "    return np.sqrt(a) * np.exp(-b * t) * np.sin(c * t) + 0.5 * np.cos(2 * t)\n",
+    "# Fixed parameters\n",
+    "b = -0.13\n",
+    "c = 9\n",
+    "# Original time grid and a-grid\n",
+    "t = np.linspace(0, 1, 100)\n",
+    "a_values = np.linspace(0.0, 1.0, 10)\n",
+    "# Compute f for all (a, t)\n",
+    "F = np.zeros((len(a_values), len(t)))\n",
+    "for i, a_val in enumerate(a_values):\n",
+    "    F[i, :] = f(t, a_val, b, c)\n",
+    "# Create 2D interpolator over (a, t)\n",
+    "interp_2d = RegularGridInterpolator(\n",
+    "    (a_values, t), \n",
+    "    F,\n",
+    "    bounds_error=False,\n",
+    "    fill_value=None\n",
+    ")\n",
+    "\n",
+    "#interactive slider function\n",
+    "def interactiveratio (a_values):\n",
+    "    points = np.column_stack([np.full_like(t, a_values), t])\n",
+    "\n",
+    "    f_interp = interp_2d(points)\n",
+    "    f_true = f(t, a_values, b, c)\n",
+    "    eps = 1e-10\n",
+    "    ratio = f_interp / (f_true + eps)\n",
+    "\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(t, ratio, label=\"ratio = interp / true\")\n",
+    "    plt.hlines(1.0, t.min(), t.max(), colors='red', linestyles='--')\n",
+    "    plt.title(f\"Ratio of interpolated to true values (a={a_values:.3f})\")\n",
+    "    plt.xlabel(\"t\")\n",
+    "    plt.ylabel(\"Ratio\")\n",
+    "    plt.ylim(0, 2)\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "interact(interactiveratio,a_values=ipywidgets.FloatSlider(min=0, max=1, step=0.01, value=0.125));\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -408,13 +474,33 @@
    "metadata": {},
    "source": [
     "## Question 8\n",
-    "Answered by -"
+    "Answered by - Aditya Praveen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b21961d6",
+   "metadata": {},
+   "source": [
+    "When a is at (approx) {0, 0.11,0.22,0.33,0.44, 0.56, 0.67, 0.78, 0.89, 1}, the ratio of interpolated to true values is flat from 0 to 1.\n",
+    "Away from these points, the ratio can deviate substantially from 1 (for instance at a=0.070 - where there is sharp vertical spikes suggesting 0 or near 0 denominator i.e. the function crosses 0).\n",
+    "The deviations from 1 when a is away from {0, 0.11,0.22,0.33,0.44, 0.56, 0.67, 0.78, 0.89, 1} reduce as a approaches 1.\n",
+    "\n",
+    "The explanation for this is that the interpolator is built from the 10 parametr values and 100 time points, with exact values stored on that grid. Therefore RegularGridInterpolator returns the ezxact value of the function at the grid points, so if the slider is set to one of the a_values, the interpolated value must be the true falue, and hence the ratio is 1 for all t.\n",
+    "\n",
+    "The true function can be expressed as f(t,a,b,c) = G(t)*sqrt(a) + I(t), with a only passing through in the square root term.  The square root term is continous, non-linear and concave on (0,1]. The gradient decreases as a approaces 1, and the second derivative is negative  (-1/(4a^(3/2))), so it is very  and negative near a=0, and reduces in magnitude as a approaches 1. Intutively, this is like the function becoming more non-linear as a approaches 0. \n",
+    "\n",
+    "Therefore between the a_values points, the RegularGridInterpolator is using linear interpolation and thus trying to estimate a a concave curve by a straight line - which will introduce an error at some points.\n",
+    "\n",
+    "But because the curve is less linear when a is closer to 0, deviations between the true and interpolated value when a is outside a_values is greater when a is closer to 0 than when it is clloser to 1 - and the maximum interpolation error shrinks - and the ratio is closer to 1 in general.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "environment",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
